# dt-bridge

./: .coverage  fast.sh  gemini.md  pyproject.toml
docs/: Bridge_Blueprint.md
scripts/: __init__.py  check_compliance.sh  ingest_knowledge.py  seed_mock_kolibri.py  verify_search.py
src/dt_bridge/: __init__.py  interfaces.py
src/dt_bridge/agents/: __init__.py  assessor.py  foreman.py  librarian.py  roundtable.py  state.py
src/dt_bridge/etl/: __init__.py  kolibri_extractor.py  transcript_vectorizer.py
src/dt_bridge/retrieval/: __init__.py  librarian.py
tests/: __init__.py  conftest.py  test_agents.py  test_architecture.py  test_etl_extractor.py  test_retrieval.py
