[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dt-bridge"
version = "0.1.0"
description = "Deepthought Frontal Lobe: Kolibri ETL & LangGraph Orchestrator"
requires-python = ">=3.12,<3.13"
authors = [{name = "Epistemon", email = "charlesrobertsstudio@gmail.com"}]
dependencies = [
    "langgraph>=0.2.60",
    "kuzu>=0.11.3",
    "lancedb>=0.25.0",
    "pandas>=2.3.0",
    "dt-contracts",
    "pandas-stubs[dev]>=3.0.0.260204",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
]

[tool.mypy]
python_version = "3.14"
strict = true
ignore_missing_imports = false
disallow_untyped_defs = true
disallow_untyped_calls = true
warn_return_any = true
no_implicit_optional = true
check_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
warn_unused_ignores = true
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = "dt_bridge.*"
disallow_any_explicit = true 

[[tool.mypy.overrides]]
module = ["lancedb.*", "langgraph.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 110
target-version = "py314"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "E501", "ISC001", "D203", "D213", "TRY003", "TRY300", "TRY301",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "INP001", "D100", "D103", "ANN201", "PLR2004", "TC003"]
"src/dt_bridge/agents/*" = ["TC001"]
"src/dt_bridge/etl/*" = ["TC001"]
"src/dt_bridge/agents/state.py" = ["TC001", "TC002"]
"src/dt_bridge/retrieval/*" = ["TC001", "TC002"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "architecture: architectural compliance tests",
]
filterwarnings = [
    "error",
    "ignore:Core Pydantic V1 functionality isn't compatible with Python 3.14:UserWarning",
]

[tool.coverage.report]
fail_under = 90
show_missing = true

[tool.uv]
managed = true

[tool.uv.sources]
dt-contracts = { workspace = true }
dt-testing = { workspace = true }
